# LOG

./: .gitignore  CMakeLists.txt  README.md  main.cc
include/: Log.h
src/: Log.cc
